- Add Animation - Edit UoBodyconv and Mobtypes Form.
- Add Animation - Script Script Creator.
- Add Animation - Script Script for RunUo and Sphere.
- Add Animation - Script Edit Animationlist.
- Add Creater Amin.idx and Amin.mul Empty.
- Add ScriptCreator Buttons Edit and Scripts
- Add Items Mark
- Add Items Goto Mark
- Add LandTiles Mark
- Add LandTiles Go To

Version : 4.12.2 #XG1
- BildFusion Add Sharp , Clipboard, Texture Cut.
- Make Texture, White is transparent, and black represents the transition, Texture into Texture, Colors.
- Add triangle for Tiles TextureWindowForm.
- Path Settings, Reload all Files and New, Load Single Mul file, Delete Line
- Add New Map Forell into SDK Map class
- Add Muls into SDK File class
- Add Map Forell into Map Controll and make nee class.
- Add Options %AppData% open dir
- Add Options New Map Forell
- Add Insert Maker Delete function
- Add Singe UOP Extract and Single Art Extract
- Add Pass coordinates
- Created Uo Art Merge class, which is a multifunctional tool for moving Art Mul images, 
  including shifting, saving, same height, showing only differences, free ID choice, mirroring, removing, copying to clipboard, 
  importing from clipboard, saving XML directories, ID deletion, and hex search.
- Add Label Infos
- Add Image Details
- Add MapReplaceNewForm
- Add Map7 Dragon
- Add IsoTileSlicer
- Add Octokit 9.1.2
- Add UoMap
- Add Map8 (Intermediate world)
- Add MultiScript
- Add Land Tile Art

Version : 4.12.1 #XG1
- Implemented copying multiple graphics to the clipboard with Ctrl+X.
- Add Strg+F3 Search.
- Add ParticelGreyHueShadow and ParticelGreyHue CheckBox into TextureCutter.
- Add Items ParticelGrayHueShadow.
- Add Items ParticelGrayHueShadow Colord Dialog.
- Add Checkbox ParticelGrey.
- Add Items Rhombus.
- Add Items Grid Image.
- Add Items Grid Color.
- Add Items Copy Clipboard - DetailPictureBox.
- Light class completely revised.
- Added size to light to scale the size of the light image.
- Add Landtiles Zoom Form.