@@ -30,7 +30,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="CommandLineParser" Version="2.9.1" />
-	  <PackageReference Include="IronSoftware.System.Drawing" Version="2024.2.2" />
+	  <PackageReference Include="IronSoftware.System.Drawing" Version="2024.4.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Update="Forms\AdminToolForm.cs" />
