@@ -175,9 +175,9 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.9.1" />
-		<PackageReference Include="IronSoftware.System.Drawing" Version="2024.2.2" />
-		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2210.55" />
-		<PackageReference Include="Octokit" Version="9.1.2" />
+		<PackageReference Include="IronSoftware.System.Drawing" Version="2024.4.1" />
+		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2365.46" />
+		<PackageReference Include="Octokit" Version="10.0.0" />
 		<PackageReference Include="Serilog" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="System.Resources.Extensions" Version="8.0.0" />
